# Blog

./: .env  .gitignore  README.md  test.html
client/: Cargo.toml  Trunk.toml  index.html
client/src/: fetch.rs  main.rs
client/src/components/: app.rs  card.rs  container.rs  home.rs  mod.rs  not_found.rs
client/src/components/article/: article_preview.rs  article_viewer.rs
client/src/components/user/: login.rs
client/src/models/: article.rs  user.rs
server/: Cargo.toml
server/article/: delete.rs  edit.rs  new.rs  search.rs  view.rs
server/comment/: delete.rs  new.rs  view.rs
server/models/: article.rs  comment.rs  user.rs
server/src/: errors.rs  main.rs
server/user/: info.rs  login.rs
