[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
web-sys = "0.3.65"
yew-router = "0.18.0"
gloo = "0.10.0"
gloo-net = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
wasm-bindgen-futures = "0.4.38"
pulldown-cmark = { version = "0.9.3", default-features = false, features = [
  "simd",
] }
