[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.18.0"
env_logger = "0.10.0"
actix-cors = "0.6.5"
actix-web = "4.4.0"
actix-rt = "2.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = [
  "postgres",
  "runtime-tokio-rustls",
  "macros",
  "chrono",
] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
